// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs
Project VegVault {
  database_type: 'SQLite'
  Note: '''
    # VegVault database
    Interdisciplinary database containing
    - current vegetation plot data
    - past vegetation plot data (fossil pollen reocrds)
    - trait data
    - current abiotic data (climate, soil)
    - past abiotic data (climate)
  '''
}

// Versioning
Table version_control {
  version_id INTEGER [PRIMARY KEY]               
  version TEXT
  update_timestamp DATETIME 
  changelog TEXT
}

// Authors
Table Authors {
  author_id INTEGER [PRIMARY KEY]
  author_fullname TEXT
  author_email TEXT
  author_orcid TEXT
}

// Datasets
Table Datasets {
  dataset_id INTEGER [PRIMARY KEY]
  dataset_name TEXT 
  dataset_type_id INTEGER
  data_source_id INTEGER
  data_source_type_id INTEGER
  coord_long REAL 
  coord_lat REAL
  sampling_method_id INTEGER
}

Table DatasetReference {
  dataset_id INTEGER
  reference_id INTEGER
}

// Dataset types (vegetation plot, trait, abiotic,...)
Table DatasetTypeID {
  dataset_type_id INTEGER [PRIMARY KEY]
  dataset_type TEXT
}

// here was the data obtained (BIEN, Chelsa,...)
Table DatasetSourceTypeID {
  data_source_type_id INTEGER [PRIMARY KEY]
  dataset_source_type TEXT
}

Table DatasetSourceTypeReference {
  data_source_type_id INTEGER
  reference_id INTEGER 
}

// ID from the original data source (subdatabase)
Table DatasetSourcesID {
  data_source_id INTEGER [PRIMARY KEY]
  data_source_desc TEXT
}

table DatasetSourcesReference {
  data_source_id INTEGER
  reference_id INTEGER
}

Table SamplingMethodID {
 sampling_method_id INTEGER [PRIMARY KEY]
 sampling_method_details TEXT
}

Table SamplingMethodReference {
  sampling_method_id INTEGER
  reference_id INTEGER
}

// Samples
Table Samples {
  sample_id INTEGER [PRIMARY KEY]
  sample_name TEXT
  sample_details TEXT
  age REAL
  sample_size_id INTEGER
}

Table SampleReference {
  sample_id INTEGER
  reference_id INTEGER
}

Table DatasetSample {
  dataset_id INTEGER
  sample_id INTEGER
}

Table SampleUncertainty {
  sample_id INTEGER
  iteration INTEGER
  age INTEGER
}

Table SampleSizeID {
  sample_size_id INTEGER [PRIMARY KEY]
  sample_size REAL
  description TEXT
}

Table SampleTaxa {
  sample_id INTEGER
  taxon_id INTEGER
  value REAL
}

// Taxa
Table Taxa {
  taxon_id INTEGER [PRIMARY KEY]
  taxon_name TEXT
  }

Table TaxonClassification {
  taxon_id INTEGER
  taxon_species INTEGER
  taxon_genus INTEGER
  taxon_family INTEGER
}

Table TaxonReference {
  taxon_id INTEGER
  reference_id INTEGER
}

// Traits
table TraitsDomain {
  trait_domain_id INTEGER [PRIMARY KEY]
  trait_domain_name TEXT
  trait_domanin_description TEXT
}

table Traits {
  trait_id INTEGER [PRIMARY KEY]
  trait_domain_id INTEGER
  trait_name TEXT
}

Table TraitsValue {
  trait_id INTEGER
  dataset_id INTEGER
  sample_id INTEGER //observation ID
  taxon_id INTEGER
  trait_value REAL
}

Table TraitsReference {
  trait_id INTEGER
  reference_id INTEGER
}


// The abiotic data will use geopoint as a dataset. Current data will have just
//  one sample. Palaeoclimate data will have one sample per each time slice.
Table AbioticData {
  sample_id INTEGER
  abiotic_variable_id INTEGER
  abiotic_value REAL
}

Table AbioticDataReference {
  sample_id INTEGER
  sample_ref_id INTEGER
  distance_in_km INTEGER
  distance_in_years INTEGER
}

Table AbioticVariable {
  abiotic_variable_id INTEGER [PRIMARY KEY]
  abiotic_variable_name TEXT
  abiotic_variable_unit TEXT
  measure_details TEXT
}

Table AbioticVariableReference {
  abiotic_variable_id INTEGER
  reference_id INTEGER
}

// References 
Table References {
  reference_id INTEGER [PRIMARY KEY]
  reference_detail TEXT
  mandatory BOOLEAN
}

// All references
Ref: Datasets.data_source_type_id > DatasetSourceTypeID.data_source_type_id
Ref: Datasets.dataset_type_id  > DatasetTypeID.dataset_type_id 
Ref: Datasets.sampling_method_id > SamplingMethodID.sampling_method_id   
Ref: Datasets.data_source_id > DatasetSourcesID.data_source_id 

Ref: DatasetReference.dataset_id > Datasets.dataset_id
Ref: DatasetReference.reference_id > References.reference_id

Ref: DatasetSourcesReference.data_source_id > DatasetSourcesID.data_source_id 
Ref: DatasetSourcesReference.reference_id > References.reference_id

Ref: DatasetSourceTypeReference.data_source_type_id > DatasetSourceTypeID.data_source_type_id
Ref: DatasetSourceTypeReference.reference_id > References.reference_id

Ref: SamplingMethodReference.sampling_method_id > SamplingMethodID.sampling_method_id
Ref: SamplingMethodReference.reference_id > References.reference_id

Ref: DatasetSample.dataset_id > Datasets.dataset_id 
Ref: DatasetSample.sample_id > Samples.sample_id 

Ref: Samples.sample_id < SampleTaxa.sample_id
Ref: Samples.sample_id < SampleUncertainty.sample_id
Ref: Samples.sample_id < AbioticData.sample_id
Ref: Samples.sample_size_id > SampleSizeID.sample_size_id   

Ref: SampleReference.sample_id > Samples.sample_id
Ref: SampleReference.reference_id > References.reference_id

Ref: Taxa.taxon_id < SampleTaxa.taxon_id

Ref: TaxonClassification.taxon_id > Taxa.taxon_id 
Ref: TaxonClassification.taxon_species > Taxa.taxon_id 
Ref: TaxonClassification.taxon_genus > Taxa.taxon_id 
Ref: TaxonClassification.taxon_family > Taxa.taxon_id 

Ref: TaxonReference.taxon_id > Taxa.taxon_id
Ref: TaxonReference.reference_id > References.reference_id

Ref: Traits.trait_id < TraitsValue.trait_id   
Ref: Traits.trait_domain_id > TraitsDomain.trait_domain_id 

Ref: TraitsReference.trait_id > Traits.trait_id
Ref: TraitsReference.reference_id > References.reference_id

Ref: TraitsValue.dataset_id > Datasets.dataset_id  
Ref: TraitsValue.sample_id > Samples.sample_id 
Ref: TraitsValue.taxon_id > Taxa.taxon_id 

Ref: AbioticVariable.abiotic_variable_id < AbioticData.abiotic_variable_id
Ref: AbioticDataReference.sample_id > Samples.sample_id
Ref: AbioticDataReference.sample_ref_id > Samples.sample_id

Ref: AbioticVariableReference.abiotic_variable_id > AbioticVariable.abiotic_variable_id
Ref: AbioticVariableReference.reference_id > References.reference_id
